# SDK

./: CMakeLists.txt  make_depend.sh
assets/: index.html
cmake/: ListProcess.cmake  OptionCheck.cmake
lib/windows/: libprotobuf.lib
lib/windows/include/openssl/: configuration.h
rpc_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  main_1.back
rpc_test/rpc_test/: Makefile  cmake_install.cmake
rpc_test/src/: Makefile  cmake_install.cmake
rpc_test/src/envelop/: Makefile  cmake_install.cmake
rpc_test/src/proto/: Makefile  cmake_install.cmake
rpc_test/src/sig/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  interface.cpp  interface.h
src/envelop/: CMakeLists.txt  Envelop.cpp  Envelop.h  RSA_TEXT.cpp  RSA_TEXT.h  base58.cpp  base64.cpp  base64.h  bip39.cpp  debug.h  evmc.cpp  evmc.h  evmc.hpp  hexcode.cpp  hexcode.h  keccak256.cpp  keccak256.h  new_tx.cpp  new_tx.h  sha2.cpp  tx.cpp  tx.h  util2.cpp
src/jni/: CMakeLists.txt  com_example_jni_sig.cpp  com_example_jni_sig.h  jni_tools.cpp  jni_tools.h
src/proto/: CMakeLists.txt
src/proto/src/: ca_protomsg.proto  sign.proto
src/sig/: CMakeLists.txt  Mac.h  sig.cpp  sig.h  sigTx.cpp  sigTx.h
test/: CMakeLists.txt  interfaceTest.cpp
test_newaddr/: CMakeLists.txt  main.cpp
tools/: cp_protoc.sh  gen_proto.sh
